# compile-opencv

./: README.md  build.sh  build_aarch64_linux.sh  build_windows.sh  build_windows_shared.sh
cmake/: gcc-toolchain-aarch64-linux.cmake  mingw-toolchain-x86_64.cmake
example/: CMakeLists.txt  build.sh  build_aarch64_linux.sh  build_windows.sh  build_windows_shared.sh  main.cpp
